--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@
 .title {
   margin-top: 50px;
 }
-.title h1 {
+.title h2 {
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
   font-size: 50px;
@@ -33,7 +33,7 @@
   text-align: center;
   line-height: 80px;
 }
-.title h2 {
+.title h3 {
   font-family: 'Raleway', sans-serif;
   font-size: 24px;
   letter-spacing: 15px;
@@ -49,7 +49,6 @@
   font-family: "BebasNeue-Regular", arial, sans-serif;
   font-size: 16px;
   margin-bottom: 30px;
-  color: #1f261f;
 }
 .mainContainer h2 {
   font-family: 'Raleway', sans-serif;
@@ -69,6 +68,7 @@
 .mainContainer p {
   line-height: 22px;
   letter-spacing: .5px;
+	color: #333333;
 }
 /* Why */
 .whyContainer img {
@@ -103,4 +103,5 @@
   letter-spacing: .5px;
   font-family: "BebasNeue-Regular", arial, sans-serif;
   margin-left: 20px;
+	color: #333333;
 }
